--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -58,4 +58,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/SuperHeroAPI:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/superheroapi:latest
