--- a/SuperHeroAPI/appsettings.json
+++ b/SuperHeroAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=heroes2023;Integrated Security=True;trusted_connection=true;encrypt=false;"
+    "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;encrypt=false;"
   },
   "Logging": {
     "LogLevel": {
