--- a/SuperHeroAPI.Test/SuperHeroAPI.Test.csproj
+++ b/SuperHeroAPI.Test/SuperHeroAPI.Test.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
 	  <PackageReference Include="AutoFixture" Version="4.18.0" />
 	  <PackageReference Include="FluentAssertions" Version="6.12.0" />
+	  <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
 	  <PackageReference Include="Moq" Version="4.20.69" />
     <PackageReference Include="xunit" Version="2.5.0" />
